--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Boots/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
-<body>
-    <h1>CC</h1>
+<body style="background-color: black; color: #cfcfcf80;" >
+<nav class="navbar navbar-expand-lg">
+  <div class="container d-flex justify-content-between align-items-center"> 
+    <div class="d-flex">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="#">Loud Club</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Hotels</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Tours</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Loud Punx</a></li>
+      </ul>
+    </div>
+    <a class="navbar-brand mx-3" href="#">
+      <img src="" alt="Rolling Loud Logo">
+    </a>
+    <div class="d-flex">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="#">Sponsors</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Bag Policy</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Press</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">FAQ/Info</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<h1>LOUD STREETZ 2025</h1>
+<div>
+    <img src="" alt=""><img src="" alt=""><img src="" alt="">
+    <hr color="" width="30%" >
+</div>
+<h1>SIGN UP TO THE FESTIVAL </h1><br>
+<div>BE THE FIRST TO ACCES AND GET</div>
 </body>
 </html>
